tests/fixtures/invalid/str_mul_none.py
# Cannot multiply Str and None
x: str = "hello" * None
